<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HIALS</string>
    <string name="version">Version 1.0</string>
    <string name="desktop_name">Desktop</string>
    <string name="settings_name">Settings</string>
    <string name="menu_update">Update</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_download">Download</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="course">Course</string>
    <string name="work">Work</string>
    <string name="handins">Handins</string>
    <string name="exam">Exam</string>
    <string name="menu_search">Search</string>
    <string name="loading">Loading</string>
    <string name="cannot_connect">Cannot connect to server</string>
    <string name="login">Login</string>
    
    <string name="icon_directory">Directory</string>
    <string name="icon_news">News</string>
    <string name="icon_courses">Courses</string>
    <string name="icon_library">Library</string>
    <string name="icon_video">Video</string>
    
    <string
        name="app_logo_top">
        Høgskolen i Ålesund
    </string>
    <string
        name="postadresse">
        \n
        Postadresse: \n 
        Høgskolen i Ålesund \n
        Postboks 1517 \n
        6025 Ålesund \n
    </string>
    <string
        name="besøksadresse">
        Besøks- og leveringsadresse: \n 
        Larsgårdsvegen 2 \n
        6009 Ålesund \n
    </string>
    <string
        name="tlf">
        Telefonnummer: \n 
        +47 70 16 12 00 \n
    </string>
    <string
        name="epost">
        E-post: \n 
        postmottak@hials.no \n
    </string>
    
    <string-array name="people_array">
        <item>Per</item>
        <item>Ola</item>
        <item>Janne</item>
        <item>Eva</item>
        <item>Nils</item>
        <item>Svein</item>
        <item>Berit</item>
        <item>Camilla</item>
    </string-array>
    
    <string-array name="main_list">
        <item>Startside</item>
        <item>Informasjon</item>
        <item>Nyheter</item>
        <item>Studier</item>
        <item>Videoer</item>
        <item>Quiz</item>
        <item>Dokumenter</item>
        <item>Opptak</item>
        <item>Datoer</item>
        <item>Hjelp</item>
    </string-array>
    
    <string-array name="programme_list">
        <item>Startside</item>
        <item>Informasjon</item>
        <item>Nyheter</item>
        <item>Fag</item>
        <item>Videoer</item>
        <item>Quiz</item>
        <item>Dokumenter</item>
        <item>Opptak</item>
        <item>Datoer</item>
        <item>Hjelp</item>
    </string-array>
    
    <string-array name="course_list">
        <item>Startside</item>
        <item>Informasjon</item>
        <item>Nyheter</item>
        <item>Fag</item>
        <item>Videoer</item>
        <item>Quiz</item>
        <item>Dokumenter</item>
        <item>Opptak</item>
        <item>Datoer</item>
        <item>Hjelp</item>
    </string-array>
    
    <string name="name">Per Olsen</string>
    <string name="info">Info</string>
    
    <!--Text-strings-->
    <string name="ok">OK</string>
    <string name="cancel">Avbryt</string>
    <string name="warning">Advarsel</string>
    <string name="summary">Oppsummering</string>
    <string name="nodescription">Ingen beskrivelse.</string>
    <string name="quizStartButtonText">Start Quiz!</string>
    <string name="quizAlreadyTakenText">Du har allerede tatt denne Quiz\'en.</string>
    <string name="quizNumberOfQuestionsText">Antall spørsmål:</string>
    <string name="quizTypeText">Type:</string>
    <string name="quizTypeUnknownText">Ukjent</string>
    <string name="quizNoQuestionsText">Denne Quiz\'en har ingen spørsmål.</string>
    <string name="quizInvalidFormatText">Quiz\'en er feil formatert.</string>
    <string name="quizResultText">Resultat:</string>
    <string name="quizResultFailText">Ikke bestått.</string>
    <string name="quizResultPassText">Bestått</string>
    <string name="quizResultNotTaken">Ikke gjennomført.</string>
    <string name="quizBackToMainQuizButtonText">Tilbake til quiz-siden</string>
    <string name="quizNextButtonText">Neste spørsmål</string>
    <string name="quizPreviousButtonText">Forrige spørsmål</string>
    <string name="quizGoToResultsButtonText">Gå til resultat</string>    
    <string name="quizUnfilledAnswersWarningText">Du har ikke fylt ut alle svarene ennå!</string>   
    <string name="quizResultMainText">Dette er dine svar. Du kan bekrefte de i listen under, og scrolle ned for å vise/sende resultat. Det vil ikke være mulig å gå tilbake etter dette er gjort.</string>
    <string name="quizResultShowAnswerButtonText">Se fasit!</string>
    <string name="quizResultViewSummaryButtonText">Se oppsummering</string>
    <string name="quizResultButtonSendToServeText">Send dine svar til server.</string>
    <string name="quizResultButtonBackToQuizText">Tilbake til hovedsiden</string>
    <string name="quizResultBackToQuizPrompt">Tilbake til hovedsiden?</string>
    <string name="quizResultBackToQuizText">Dette vil forkaste dine svar og gå tilbake til Quiz\'ens hovedside.</string>
</resources>
