<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"	 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:padding="5dp">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewTopTitle"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="top|center"
        android:textSize="@dimen/logo_size">
    </TextView>

    <ImageView
        android:id="@+id/ImageView2_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:src="@drawable/trapp">
    </ImageView>
            
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_edges"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/TextViewPostAddress"
        android:text="@string/postadresse"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center">
    </TextView>
    <TextView
        android:id="@+id/TextViewDeliveryAddress"
        android:text="@string/besøksadresse"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center">
    </TextView>
    <TextView
        android:id="@+id/TextViewTlf"
        android:text="@string/tlf"
        android:autoLink="phone"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center">
    </TextView>
    <TextView
        android:id="@+id/TextViewEpost"
        android:text="@string/epost"
        android:autoLink="email"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center">
    </TextView>
    </LinearLayout>
</LinearLayout>
</ScrollView>